Patrik's comments